--- a/posts/templates/home.html
+++ b/posts/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <H1>Message Board Homepage</H1>
+    <h1>Message Board Homepage</h1>
     <u1>{% for post in all_posts_list %} <li>{{ post.text }}</li>{% endfor %}</u1>
 </head>
 <body>
